--- a/OBC/OBC.vcxproj.filters
+++ b/OBC/OBC.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="src\obc\cuda utilities\cuda_ops.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\obc\Error.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="vcpkg.json" />
