--- a/OBC/OBC.vcxproj.filters
+++ b/OBC/OBC.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="src\obc\ConvolutionalLayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\obc\example models\TestConvoModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\obc\ActivationLayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\crow_all.h">
@@ -327,6 +333,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\obc\ConvolutionalLayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\obc\example models\TestConvoModel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
