--- a/OBC/OBC.vcxproj.filters
+++ b/OBC/OBC.vcxproj.filters
@@ -350,6 +350,9 @@
     <ClInclude Include="src\obc\example models\MNIST\MnistDataHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\obc\MaxPoolingLayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="vcpkg.json" />
