--- a/OBC/OBC.vcxproj
+++ b/OBC/OBC.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="src\main.cpp" />
     <CudaCompile Include="src\obc\cuda utilities\cuda_ops.cu" />
     <ClCompile Include="src\obc\ConvolutionalLayer.cpp" />
+    <ClCompile Include="src\obc\MaxPoolingLayer.cpp" />
     <ClCompile Include="src\obc\example models\MNIST\MnistDataHandler.cpp" />
     <ClCompile Include="src\obc\DenseLayer.cpp" />
     <ClCompile Include="src\obc\example models\SerializationExample.cpp" />
@@ -263,6 +264,7 @@
     <ClInclude Include="src\obc\ConvolutionalLayer.h" />
     <ClInclude Include="src\obc\cuda utilities\cublas_utils.h" />
     <ClInclude Include="src\obc\cuda utilities\cuda_ops.h" />
+    <ClInclude Include="src\obc\MaxPoolingLayer.h" />
     <ClInclude Include="src\obc\example models\MNIST\MnistDataHandler.h" />
     <ClInclude Include="src\obc\DenseLayer.h" />
     <ClInclude Include="src\obc\Error.h" />
@@ -271,7 +273,6 @@
     <ClInclude Include="src\obc\example models\MNIST\TrainMNIST.h" />
     <ClInclude Include="src\obc\example models\Xor.h" />
     <ClInclude Include="src\obc\Layer.h" />
-    <ClInclude Include="src\obc\MaxPoolingLayer.h" />
     <ClInclude Include="src\obc\Network.h" />
     <ClInclude Include="src\obc\Serialization.h" />
   </ItemGroup>
